package edu.csc207.recruitment.actions.admin;

import edu.csc207.recruitment.actions.base.CreateUserBaseAction;

public class CreateUserAction extends CreateUserBaseAction {

    public CreateUserAction() {
        super("2", "Create a user", false);
    }
}
