package edu.csc207.recruitment.actions.user;

import edu.csc207.recruitment.actions.base.CreateUserBaseAction;

public class SignUpAction extends CreateUserBaseAction {

    public SignUpAction() {
        super("1", "To sign up", true);
    }

}
